"ChangeLog"

2007-03-13	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-07:
	  config/guile.m4: restructured configure tests more, 
		now AM_CONDITIONAL(HAVE_LIBGUILE) requires correct API (1.8)
		AC_CHECK_FUNC on true symbol function, not macro function.
		Now allow user to pass specific guile-config as
			--with-guile-config=... for version selection.  
	  configure.ac: generate test/guile/Makefile


2007-03-12	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-05:
	  config/guile.m4: more specific function tests.
	  README: we now require guile-1.8 for now, until we re-write
		wrappers for 1.6's missing interfaces.  


	* HACKT-00-01-04-main-00-81-04:
	  config/builtin_funcs.m4: added long long tests and parity tests.


2007-03-11	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-02-merged-shlib-01-07:
	  installed-scripts now replaced with dynamically linked executables.


2007-03-08	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81:
	  Dropping swig as a bootstrap requirement, maintaining
		guile-scm wrappers by hand.  


2007-03-02	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-92:
	  Date bump after minor patches.  


2007-03-01	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-91:
	  config/cxx_STL.m4: fstream tests assume OK if cross compiling.


2007-02-26	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-87-merged-chpsim-03-10:
	  Branch merge.


2007-02-22	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-86:
	  config/cxx_STL.m4: check whether SGI extension bitset member 
		functions are actually *linkable* using g++.
		Extends tests to compile and link (separately)


2007-02-21	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-83:
	  configure.ac: new autoconf macro tests for SGI extensions
		in std::bitset, tests added to config/cxx_STL.m4.